--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,9 @@ main p {
 }
 
 
-.parrafoMain {
-    align-self: center;
-}
-
-
 .cursos {
     align-self: center;
-    font-size: 1.3rem;
     line-height: 45px;
-    width: 200px;
     padding-left: 3rem;
     padding-bottom: 5rem;
 }
@@ -68,19 +61,21 @@ main p {
 
 .animacion {
     animation-name: nuevaModalidad;
-    animation-duration: 2s;
+    animation-duration: 1.1s;
     animation-iteration-count: infinite;
 }
 
+
 @keyframes nuevaModalidad {
     0% {
-        color: #888585;
+        color: #eaff00ef;
     }
 
     100% {
-        color: #ffff00ef;
+        color: #888585;
     }
 }
+
 
 .inscripcion {
     text-decoration: none;
@@ -129,7 +124,7 @@ i:hover {
 /* Comienzo Main */
 
 .mainCursos {
-    background-image: linear-gradient(to bottom, #b1afaf, #e8e4e4, #f7efef);
+    background-image: linear-gradient(to bottom, #959292, #e8e4e4, #f7efef);
 }
 
 
@@ -241,7 +236,7 @@ tr:hover {
     color: #fff;
     font-size: larger;
     font-weight: bolder;
-    transition-duration: 0.8s;
+    transition-duration: 0.5s;
 
 }
 
@@ -264,6 +259,10 @@ tr:hover {
 /*.......... Comienzo GALERIA ..........*/
 
 /* Comienzo Main */
+
+.cards a:hover {
+    color: #19afaf;
+}
 
 .card {
     box-shadow: 10px 10px 10px;
@@ -307,6 +306,23 @@ tr:hover {
 /*............... Comienzo Media Queries ...............*/
 
 /* Comienzo Index */
+
+@media (max-width: 320px) {
+    .inscripcion {
+        font-size: medium;
+    }
+
+    .mainLista {
+        text-align: left;
+    }
+
+    .mainLista li {
+        font-size: medium;
+    }
+}
+
+
+
 
 @media (max-width: 610px) {
     .slogan {
