--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 /*.......... Comienzo INDEX ..........*/
 
-/* Comienzo Header */
+/* Comienzo Header 
 
 .navegacion ul {
     list-style-type: none;
@@ -31,9 +31,9 @@
     background-position: center;
 }
 
-/* Fin Header */
+ Fin Header */
 
-/* Comienzo Main */
+/* Comienzo Main 
 
 main p {
     color: #19afaf;
@@ -83,9 +83,9 @@ main p {
     border: 2px solid;
 }
 
-/* Fin Main */
+ Fin Main */
 
-/* Comienzo Footer */
+/* Comienzo Footer 
 
 .footerIconInsta {
     font-size: 2rem;
@@ -106,22 +106,23 @@ iframe {
 
 i {
     transition: 0.5s;
+
 }
 
 
-i:hover {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #888585;
+.iconRedes:hover {
+    color: #19afaf;
+    transition: 0.5s;
+    font-size: larger;
+
 }
 
-/* Fin Footer */
-
+Fin Footer 
 /*.......... Fin INDEX ..........*/
 
 /*.......... Comienzo CURSOS ..........*/
 
-/* Comienzo Main */
+/* Comienzo Main 
 
 .mainCursos {
     background-image: linear-gradient(to bottom, #959292, #e8e4e4, #f7efef);
@@ -215,7 +216,7 @@ i:hover {
     font-size: large;
     padding-left: 1rem;
     text-align: left;
-}
+}*/
 
 /* Fin Main */
 
