--- a/style-sass.css
+++ b/style-sass.css
@@ -1,2 +1,196 @@
-h1 {
-  color: red; }
+.navegacion ul {
+  list-style-type: none;
+  line-height: 2rem; }
+
+.navegacion a {
+  color: #19afaf;
+  text-decoration: none;
+  transition: 0.5s; }
+
+.navegacion a:hover {
+  color: #888585;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  text-decoration: overline; }
+
+.footerIconInsta {
+  font-size: 2rem;
+  color: #cd1d92; }
+
+.footerIconFace {
+  font-size: 2rem;
+  color: #1635cc; }
+
+iframe {
+  border-radius: 10px; }
+
+i {
+  transition: 0.5s; }
+
+.iconRedes:hover {
+  color: #19afaf;
+  transition: 0.5s;
+  font-size: larger; }
+
+.bg-image {
+  background-image: url(./imagenes/origamimask.jpg);
+  background-size: cover;
+  background-position: center; }
+
+main p {
+  color: #19afaf; }
+
+.cursos {
+  align-self: center;
+  line-height: 45px;
+  padding-left: 3rem;
+  padding-bottom: 5rem; }
+  .cursos h2 {
+    font-size: 3rem; }
+
+.modalidad {
+  color: #888585;
+  font-size: 2.5rem; }
+
+.animacion {
+  animation-name: nuevaModalidad;
+  animation-duration: 1.1s;
+  animation-iteration-count: infinite; }
+
+@keyframes nuevaModalidad {
+  0% {
+    color: #eaff00ef; }
+  100% {
+    color: #888585; } }
+
+.inscripcion {
+  text-decoration: none;
+  padding: 5px;
+  border: 2px solid; }
+
+.mainCursos {
+  background-image: linear-gradient(to bottom, #959292, #e8e4e4, #f7efef); }
+
+.contactoCursos {
+  color: #000;
+  font-weight: bold;
+  padding-bottom: 2rem; }
+  .contactoCursosa {
+    color: #19afaf;
+    transition: 0.5s; }
+  .contactoCursosa:hover {
+    color: #888585;
+    font-size: 1.5rem;
+    font-weight: light; }
+
+.video {
+  box-shadow: 5px 5px 5px;
+  border-radius: 2rem;
+  transition: height 1s; }
+  .video:hover {
+    height: 350px; }
+
+.iframeCursos {
+  display: flex;
+  justify-content: center;
+  align-content: center; }
+
+.listaPrecios {
+  display: flex;
+  justify-content: center;
+  align-content: center; }
+  .listaPrecios__tabla {
+    border: 2px solid black; }
+
+tr:hover {
+  background-color: #77c1c1;
+  color: #fff;
+  font-size: larger;
+  font-weight: bolder;
+  transition-duration: 0.5s; }
+
+.textarea {
+  margin: 10px; }
+
+.cards a:hover {
+  color: #19afaf; }
+
+.card {
+  box-shadow: 10px 10px 10px;
+  border-radius: 2rem;
+  transition: transform 0.4s;
+  margin-left: 5rem; }
+  .card:hover {
+    transform: translateY(-20px); }
+  .card__header img {
+    width: 100%;
+    border-radius: 25px;
+    margin-bottom: 10px; }
+  .card__description {
+    color: #000;
+    margin-bottom: 20px; }
+  .card__link {
+    font-weight: bolder;
+    background-color: #888585;
+    color: #fff;
+    text-decoration: none;
+    width: 100%;
+    display: inline-block;
+    border-radius: 50px;
+    padding: 1rem; }
+
+@media (max-width: 320px) {
+  .inscripcion {
+    font-size: medium; }
+  .mainLista {
+    text-align: left; }
+  .mainLista li {
+    font-size: medium; } }
+
+@media (max-width: 610px) {
+  .slogan {
+    display: none; } }
+
+@media (max-width: 320px) {
+  .listaPrecios {
+    margin: 10px; } }
+
+@media (max-width: 375px) {
+  .listaPrecios {
+    margin: 15px; } }
+
+@media (max-width: 425px) {
+  .listaPrecios {
+    margin: 15px; } }
+
+@media (max-width: 576px) {
+  .listaPrecios {
+    margin: 15px; } }
+
+@media (max-width: 320px) {
+  .textarea {
+    margin: 5px; } }
+
+@media (max-width: 375px) {
+  .textarea {
+    margin: 5px; } }
+
+@media (max-width: 425px) {
+  .textarea {
+    margin: 5px; } }
+
+@media (max-width: 320px) {
+  div {
+    width: 100%; } }
+
+@media (max-width: 375px) {
+  div {
+    width: 100%; } }
+
+@media (max-width: 425px) {
+  div {
+    width: 100%; } }
+
+@media (max-width: 576px) {
+  div {
+    width: 100%; } }
