--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,12 +1,12 @@
 .navegacion {
 
-    & ul {
+    ul {
         list-style-type: none;
         line-height: 2rem;
     }
 
 
-    & a {
+    a {
         color: #19afaf;
         text-decoration: none;
         transition: 0.5s;
