--- a/sass/_cursospages.scss
+++ b/sass/_cursospages.scss
@@ -4,18 +4,18 @@
 
 
 .contactoCursos {
-    color: #000;
+    color: #19afaf;
     font-weight: bold;
     padding-bottom: 2rem;
 
 
-    &a {
+    a {
         color: #19afaf;
         transition: 0.5s;
     }
 
 
-    &a:hover {
+    & a:hover {
         color: #888585;
         font-size: 1.5rem;
         font-weight: light;
