--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 /*.......... Comienzo INDEX ..........*/
 
-/* Comienzo Header 
+/* Comienzo Header */
 
 .navegacion ul {
     list-style-type: none;
@@ -31,9 +31,9 @@
     background-position: center;
 }
 
- Fin Header */
+/* Fin Header */
 
-/* Comienzo Main 
+/* Comienzo Main */
 
 main p {
     color: #19afaf;
@@ -83,9 +83,9 @@ main p {
     border: 2px solid;
 }
 
- Fin Main */
+/* Fin Main */
 
-/* Comienzo Footer 
+/* Comienzo Footer */
 
 .footerIconInsta {
     font-size: 2rem;
@@ -114,44 +114,18 @@ i {
     color: #19afaf;
     transition: 0.5s;
     font-size: larger;
-
 }
 
-Fin Footer 
+/* Fin Footer */
+
 /*.......... Fin INDEX ..........*/
 
 /*.......... Comienzo CURSOS ..........*/
 
-/* Comienzo Main 
+/* Comienzo Main */
 
 .mainCursos {
     background-image: linear-gradient(to bottom, #959292, #e8e4e4, #f7efef);
-}
-
-
-.cursosDiv1 p {
-    color: #19afaf;
-    padding-left: 3rem;
-    padding-right: 3rem;
-}
-
-
-.parrafoCursos {
-    padding-top: 3rem;
-}
-
-
-.cursosDiv2 h2 {
-    padding-top: 2rem;
-    text-align: center;
-    font-size: 2rem;
-}
-
-
-.cursosDiv2 ul li {
-    font-size: larger;
-    text-align: center;
-    list-style-type: none;
 }
 
 
@@ -175,11 +149,6 @@ Fin Footer
 }
 
 
-.cursosDiv3 {
-    padding-bottom: 2rem;
-}
-
-
 .video {
     box-shadow: 5px 5px 5px;
     border-radius: 2rem;
@@ -197,26 +166,6 @@ Fin Footer
     justify-content: center;
     align-content: center;
 }
-
-
-.seccionCursos2 {
-    display: flex;
-    justify-content: center;
-}
-
-
-.cursosDiv4 h2 {
-    color: #ae7680;
-}
-
-
-.cursosDiv4 p {
-    color: #000;
-    font-weight: bolder;
-    font-size: large;
-    padding-left: 1rem;
-    text-align: left;
-}*/
 
 /* Fin Main */
 
@@ -321,7 +270,6 @@ tr:hover {
         font-size: medium;
     }
 }
-
 
 
 
