--- a/sass/_indexpages.scss
+++ b/sass/_indexpages.scss
@@ -1,5 +1,5 @@
 .bg-image {
-    background-image: url(./imagenes/origamimask.jpg);
+    background-image: url(../imagenes/origamimask.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -7,7 +7,7 @@
 
 main {
     p {
-        color: #19afaf;
+        color: $colorFuente;
     }
 }
 
