--- a/sass/_insumospages.scss
+++ b/sass/_insumospages.scss
@@ -12,6 +12,6 @@ tr:hover {
     background-color: #77c1c1;
     color: #fff;
     font-size: larger;
-    font-weight: bolder;
-    transition-duration: 0.5s;
+    font-weight: bold;
+    transition: $transicion;
 }
