--- a/sass/_cursospages.scss
+++ b/sass/_cursospages.scss
@@ -1,5 +1,5 @@
 .mainCursos {
-    background-image: linear-gradient(to bottom, #959292, #e8e4e4, #f7efef);
+    background-image: linear-gradient(to top, #959292, #e8e4e4, #f7efef);
 }
 
 
