--- a/css/style-sass.css
+++ b/css/style-sass.css
@@ -140,6 +140,17 @@ tr:hover {
     border-radius: 50px;
     padding: 1rem; }
 
+.whatsapp {
+  position: fixed;
+  bottom: 35px;
+  left: 25px;
+  font-size: 40px;
+  background-color: #34b449;
+  border-radius: 50%;
+  padding: 2px 10px; }
+  .whatsapp a {
+    color: #fff; }
+
 .info-base, .info-horarios, .info-telefono, .info-direccion {
   color: #19afaf;
   font-size: large;
