--- a/sass/_insumospages.scss
+++ b/sass/_insumospages.scss
@@ -4,12 +4,12 @@
     align-content: center;
 
     &__tabla {
-        border: 2px solid black;
+        border: 2px solid #000;
     }
 }
 
 tr:hover {
-    background-color: #77c1c1;
+    background-color: rgb(179, 172, 172);
     color: #fff;
     font-size: larger;
     font-weight: bold;
