--- a/sass/_cursospages.scss
+++ b/sass/_cursospages.scss
@@ -1,11 +1,11 @@
 .mainCursos {
-    background-image: linear-gradient(to top, #959292, #e8e4e4, #f7efef);
+    background-image: linear-gradient(to top, #9cd2cc, #d0f7f4, #f7efef);
 }
 
 
 .contactoCursos {
     color: $colorFuente;
-    font-weight: bold;
+    font-weight: lighter;
     padding-bottom: 2rem;
 
 
@@ -21,7 +21,6 @@
         font-weight: light;
     }
 }
-
 
 .video {
     box-shadow: 5px 5px 5px;
